grpc-hello.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-hello
  template:
    metadata:
      labels:
        app: grpc-hello
    spec:
      containers:
      - name: grpc-hello
        image: soeirosantos/grpc-server
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc
spec:
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: http
  selector:
    app: grpc-hello
