grpc-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    nginx.org/grpc-services: grpc-svc
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - grpc.example.com
    secretName: grpc-secret
  rules:
  - host: grpc.example.com
    http:
      paths:
      - path: /helloworld.Greeter
        backend:
          serviceName: grpc-svc
          servicePort: 50051
